[metadata]
name = smtb_direct
version = 0.0.1-pre
description = control SMTB Direct
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = yswd82
author_email = y.sawada.82@gmail.com
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    selenium
    mojimoji